fix: 更换播放模式图标

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,1 @@
-13. 恢复歌单
-14. 我的收藏collection
-4. 每日推荐背景图服务没有，是广告，找个合适的图片
-6. 排行榜的数据
-7. 歌单页
-8. 播放的歌曲在列表中显示喇叭
-10. player： 评论，列表minilist，收藏歌曲，黑胶针，设置minilist，点击左上歌手名进入歌手页（多个歌手则弹出歌手选择）
-11. 私人fm
-12. miniplayer，列表minilist，显示当前歌词
-15. mine页，创建的歌单，点齿轮，选择创建新歌单， 取消后， 再点齿轮就没反应了
-16. 搜索后单曲页没法滚动
-5. 歌单文字第二行才省略多余的
-9. 推荐页，歌单听者数量, 以万这种单位结尾
+1. 列表只有一首歌曲时, 挪动CD后，无法暂停播放
